# OpenCV

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  canny  canny.cpp  cmake_install.cmake  convex_hull  convex_hull.cpp  jarvis_match  jarvis_match.cpp  line.cpp  line_detector.cpp  obj_detect  obj_detect.cpp  road_seg_3.py  svm.cpp  task_Astar  task_Astar.cpp  task_dijkstra  task_dijkstra.cpp  tlr  tlr.cpp  trans_video  trans_video.cpp  transform  transform.cpp  video  video.cpp  watershed  watershed.cpp
opencv_python/: accurate_detect.py  corner_detect.py  face_detect.py  video.py
