cmake_minimum_required(VERSION 2.8)
project( OPENCV )
find_package( OpenCV REQUIRED )
add_executable( canny canny.cpp )
target_link_libraries( canny ${OpenCV_LIBS} )
add_executable( video video.cpp )
target_link_libraries( video ${OpenCV_LIBS} )
add_executable( tlr tlr.cpp )
target_link_libraries( tlr ${OpenCV_LIBS} )
add_executable( task_Astar task_Astar.cpp )
target_link_libraries( task_Astar ${OpenCV_LIBS} )
add_executable( task_dijkstra task_dijkstra.cpp )
target_link_libraries( task_dijkstra ${OpenCV_LIBS} )
add_executable(obj_detect obj_detect.cpp)
target_link_libraries(obj_detect ${OpenCV_LIBS})
add_executable(jarvis_match jarvis_match.cpp)
target_link_libraries(jarvis_match ${OpenCV_LIBS})